sample/asm/errors/forward_out_of_function_jump.asm
.function: main/0
    jump 3
    izero 0
    return
.end
